2012-09-25  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GNUmakefile:
        * Source/GSSocketStream.m:
        * Source/NSFileHandle.m:
        * Headers/Foundation/NSFileHandle.h:
        * SSL/GSSSLHandle.m:
        * Source/GSTLS.h:
        * Source/GSTLS.m:
        Restructure to separate some of the tls functionality out.

2012-09-24  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSBundle.m: Fix error spotted by Fred.

2012-09-24  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/Foundation/NSFileHandle.h: deprecate old method for setting
        certificate and add new one.
        * SSL/GSSSLHandle.m: Support new method and move generic code to
        NSFileHandle.m
        * Source/GSSocketStream.m: Implement NSFileHandle SSL/TLS support
        using GNUTLS.
        * Source/NSFileHandle.m: Some ssl/tls restructuring, use GNUTLS if
        available.
        * configure.ac: Don't build SSL bundle if isupport is built-in.
        * GNUmakefile: ditto
        * base.make.in: ditto ... plus fix to define setting to show whether
        ICU is avaiable.
        * configure: regenerate

2012-09-23  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSSocketStream.m: Expose GSFileHandle ivars for compilation
	with the non-fragile ABI.
	* Headers/GNUstepBase/GSVersionMacros.h: Restore line that was
	accidentally commented out.

2012-09-23  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSTimSort.m: Fix typo.

2012-09-21  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSArray.m:
        * Source/NSDate.m:
        * Source/NSDictionary.m:
        * Headers/Foundation/NSArray.h:
        Comment/documentation fixups to avoid warnings etc.
        * Tools/AGSParser.h:
        * Tools/AGSParser.m:
        Fix memory management error causing reference to deallocated object.

2012-09-20  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSTimSort.m: A few more timsort bugfixes.
