@@ -1,3 +1,8 @@
+2012-09-26  Richard Frith-Macdonald <rfm@gnu.org>
+
+        * Source/NSUserDefaults.m: Fix error synchronising from changes in
+        database ... was not sending the notification to say we had updated.
+
 2012-09-25  Richard Frith-Macdonald <rfm@gnu.org>
 
         * Source/GNUmakefile:
